--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "async": "0.6.2",
     "backbone": "^1.3.3",
     "basic-auth-connect": "^1.0.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bowser": "^2.11.0",
     "bufferedstream": "1.6.0",
